fix Datepicker on Mobile-view

--- a/src/components/BalanceLine/BalanceLine.module.css
+++ b/src/components/BalanceLine/BalanceLine.module.css
@@ -19,6 +19,9 @@
     padding-top: 40px;
     padding-bottom: 9px;
   }
+  .datepicker {
+    display: none;
+  }
 }
 
 @media screen and (min-width: 1280px) {
